@@ -65,6 +65,8 @@
 
 	* ipmi-config: Remove ancient backwards compatibility config field names.
 
+	* common/parsecommon/parse-common.c: Don't support "plain" as an authentication type.
+
 2020-01-28 Albert Chu <chu11@llnl.gov>
 
 	* man/ipmi-oem.8.pre.in: Fix formatting typo that led to line not
